# MindRoadCIJenkinsGameLab

./: CMakeLists.txt  Game.cpp  GameLogic.cpp  GameLogic.hpp  README.md  build.sh
test/: CMakeLists.txt  GameTest.cpp
